syntax = "proto3";

package pb;

import "number_msg.proto";

option go_package = "./pb";

service ArithmeticService {
  rpc GetAdd(OperationParameters) returns (Answer) {}
  rpc GetSub(OperationParameters) returns (Answer) {}
  rpc GetMulti(OperationParameters) returns (Answer) {}
  rpc GetDiv(OperationParameters) returns (Answer) {}
}